--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     
 <body>   
     <div class="container-fluid" id="app">
+
+        <div class="row">
+            <div class="col-md-4">
+                <h5>Register</h5>
+                <button class="btn btn-default btn-warning" @click="register">Registrar</button>
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-md-4">
                 <h5>Login</h5>
@@ -31,8 +39,13 @@
             </div>
         </div>
 
+
+
+
+
+
     </div> 
-    <script>
+    <script type="module">
         const { createApp } = Vue
 
         createApp({
@@ -41,7 +54,20 @@
                 cedula: "19607174",
                 clave: "ab23cd57e*.",
                 url : "https://estudiantes.kme.sh/Authentication/Login",
-                token: "Login para encontrar token"
+                token: "Login para encontrar token",
+                registro: {
+                    cedula: "19607111",
+                    clave: "Java***174",
+                    nombre: "Agustin",
+                    apellido: "Lara",
+                    correo: "agustinlara@gmail.com",
+                    telefono: "31831544",
+                    direccion: "uruguay",
+                    carreraID: 1,
+                    tutorID: 1,
+                    servicioTitulo: "Titulo de servicio pajuo de agustin",
+                    servicioInicio: "2023-05-22"                    
+                }
             }
         },
         methods: {
@@ -59,6 +85,40 @@
                 })
                 .then(response => response.text());
                 this.token = res;
+            },
+            register: async function(){
+                try {
+                    const response = await fetch('https://estudiantes.kme.sh/Authentication/Register', {
+                    method: 'POST',
+                    headers: {
+                        'accept': '*/*',
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        cedula: '19607111',
+                        clave: 'Java***174',
+                        nombre: 'Agustin',
+                        apellido: 'Lara',
+                        correo: 'agustinlara@gmail.com',
+                        telefono: '31831544',
+                        direccion: 'uruguay',
+                        carreraID: 1,
+                        tutorID: 1,
+                        servicioTitulo: 'Titulo de servicio pajuo de agustin',
+                        servicioInicio: '2023-05-22'
+                    })
+                    });
+
+                    if (response.ok) {
+                    const res = await response.json();
+                    console.log(res);
+                    
+                    } else {
+                    throw new Error('Error en la solicitud');
+                    }
+                } catch (error) {
+                    console.error(error);
+                }
             }
         }
         }).mount('#app');
