--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                 this.token = res;
             },
             register: async function(){
-                try {
-                    const response = await fetch('https://estudiantes.kme.sh/Authentication/Register', {
+                const response = await fetch('https://estudiantes.kme.sh/Authentication/Register', {
                     method: 'POST',
                     headers: {
                         'accept': '*/*',
@@ -107,18 +106,8 @@
                         servicioTitulo: 'Titulo de servicio pajuo de agustin',
                         servicioInicio: '2023-05-22'
                     })
-                    });
-
-                    if (response.ok) {
-                    const res = await response.json();
-                    console.log(res);
-                    
-                    } else {
-                    throw new Error('Error en la solicitud');
-                    }
-                } catch (error) {
-                    console.error(error);
-                }
+                    }).then(x => x.json());
+                    console.log(response);
             }
         }
         }).mount('#app');
